--- a/gradle.properties
+++ b/gradle.properties
@@ -1,37 +1,27 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
-pluginGroup = com.github.issaloubani.glbviewer
-pluginName = glb-viewer
-pluginRepositoryUrl = https://github.com/issaloubani/glb-viewer
+pluginGroup=com.github.issaloubani.glbviewer
+pluginName=glb-viewer
+pluginRepositoryUrl=https://github.com/issaloubani/glb-viewer
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
-
+pluginVersion=0.0.2
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 222
-pluginUntilBuild = 232.*
-
+pluginSinceBuild=222
+pluginUntilBuild=232.*
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2022.2.5
-
+platformType=IC
+platformVersion=2022.2.5
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
-
+platformPlugins=
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.1.1
-
+gradleVersion=8.1.1
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
-
+kotlin.stdlib.default.dependency=false
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache = true
-
+org.gradle.configuration-cache=true
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
-org.gradle.caching = true
-
+org.gradle.caching=true
 # Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
-systemProp.org.gradle.unsafe.kotlin.assignment = true
-
+systemProp.org.gradle.unsafe.kotlin.assignment=true
 # Temporary workaround for Kotlin Compiler OutOfMemoryError -> https://jb.gg/intellij-platform-kotlin-oom
-kotlin.incremental.useClasspathSnapshot = false
+kotlin.incremental.useClasspathSnapshot=false
