--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <applicationListeners>
         <listener class="com.github.issaloubani.glbviewer.GLBListener" topic="com.intellij.ide.AppLifecycleListener"/>
     </applicationListeners>
-
+    <description>The GLB Viewer Plugin for IntelliJ enables seamless GLB file viewing and animation support directly within your IntelliJ IDE. With this plugin, you can effortlessly explore, interact with, and analyze 3D models. It provides cross-platform compatibility and efficient communication through Flutter Web and Spring Boot, enhancing your development workflow and empowering you to streamline your 3D development process.</description>
     <extensions defaultExtensionNs="com.intellij">
         <fileType
                 name="GLB"
